made self evaluation more accurate lol

--- a/progress_update.tex
+++ b/progress_update.tex
@@ -117,9 +117,9 @@ US Census Bureau.
 \section{Initial Results}
 We developed an initial version of our PSO algorithm as well as an SA
 solution based on work by Burcin~Bozkaya et al\cite{local-search}.  The
-results show our PSO implementation to be slightly worse, however further
-improvements are still possible.  We plan to also implement a Tabu Search
-solution, and compare the three approaches using census data for 3 states.
+results show our PSO implementation to be worse, however further improvements
+are still possible.  We plan to also implement a Tabu Search solution, and
+compare the three approaches using census data for 3 states.
 
 % \subsection{Subsection Heading Here}
 % Subsection text here.
