added descriptions for the ohter sections

--- a/report.tex
+++ b/report.tex
@@ -31,34 +31,40 @@ I wish you the best of success.
 % Include the problem statement and describe its model.
 
 \section{Proposed Solution}
+% Generate an initial solution.
+% Suggest a cost function (objective function) suitable for this problem.
+% Define a suitable neighborhood operator.
+% Define a suitable solving strategy for this problem.
+% Select your own values for the parameter and explain the basis for your selection.
+% Describe how each algorithm (TS, SA, GA, PSO and ACO) will proceed to solve this problem by performing at least two hand iterations on a reduced version of the problem.
+% Implement the proposed solution using Matlab/Octave/Python.
+
 
 
 \section{Performance Evaluation}
+% Establish a set of evaluation metrics and run some experiments with different
+% values of algorithm parameters to quantitatively and qualitatively assess the
+% performance of the developed solution using different meta-heuristic
+% optimization techniques. Students must identify the pros and cons of each
+% technique and assess the quality of work as well as its fit with project
+% objectives.
 
 \section{Conclusions \& Recommendations}
-
-
-% \subsection{Subsection Heading Here}
-% Subsection text here.
-
-% \subsubsection{Subsubsection Heading Here}
-% Subsubsection text here.
-
-% \appendices
-% \section{Proof of the First Zonklar Equation}
-% Appendix one text goes here.
-
-% \section{}
-% Appendix two text goes here.
-
-% % use section* for acknowledgment
-% \section*{Acknowledgment}
-
-% The authors would like to thank...
+% Summarize the conclusion and future improvement. Explain how did you solve the
+% problem, what problems were met? what did the results show? And how to refine
+% the proposed solution? You may organize ideas using lists or numbered points,
+% if appropriate, but avoid making your report into a check-list or a series of
+% encrypted notes 
 
 
 
 \begin{thebibliography}{1}
+% Every report needs references; in fact, your failure to consult
+% references for guidance may be considered negligence. On the other
+% hand, when you include sentences, photos, drawings or figures from
+% other sources in your report, the complete reference must be cited.
+% Failure to do so is plagiarism, an academic infraction with serious
+% consequences.
 
 \bibitem{tsp-pso}
 Kang-Ping~Wang et al. Particle Swarm Optimization for Travelling Salesman
