added description of introduction

--- a/report.tex
+++ b/report.tex
@@ -11,12 +11,17 @@
 \maketitle
 
 \begin{abstract}
+% The Summary should be a brief version of the full report. It should give the
+% reader an accurate overview. Be brief, but be specific. 
 The abstract goes here.
 \end{abstract}
 
 \section{Introduction}
-% The Summary should be a brief version of the full report. It should give the
-% reader an accurate overview. Be brief, but be specific. 
+% Summarize the importance of the problem you are trying to solve and the reason
+% that motivated you to select this project. Explain what was the problem or
+% challenge that you were given? state the purpose of the project and how did
+% you solve it? Enumerate the objectives of the project and describe in brief
+% the structure of the report. 
 \IEEEPARstart{T}{his} demo file is intended to serve as a ``starter file''
 for IEEE journal papers produced under \LaTeX\ using
 IEEEtran.cls version 1.8b and later.
