--- a/report.tex
+++ b/report.tex
@@ -34,16 +34,78 @@ I wish you the best of success.
 
 \section{Problem Formulation and Modeling}
 % Include the problem statement and describe its model.
+The Political Districting problem can be modeled as an assignment problem with specific constraints.  The goal is to assign a fixed set of Geographical Units (GUs) to a fixed number of districts, where each district is contiguous, while minimizing a certain cost function.  
+
+Let $U$ be the set of all GUs, and let $D$ be the set of all districts.  Our goal is to minimize 
+\begin{equation}
+\sum_{u \in U} \sum_{d \in D} c_{ud} x_{ud}\\
+\end{equation}
+where
+\begin{equation}
+x_{ij} = 1 \text{ or } 0\\
+\end{equation}
+\begin{equation}
+\sum_{d \in D} x_{ud} = 1, (u \in U)\\
+\end{equation}
+
 
 \section{Proposed Solution}
+\subsection{Initial Solution}
 % Generate an initial solution.
+\subsection{Cost Function}
 % Suggest a cost function (objective function) suitable for this problem.
-% Define a suitable neighborhood operator.
-% Define a suitable solving strategy for this problem.
-% Select your own values for the parameter and explain the basis for your selection.
-% Describe how each algorithm (TS, SA, GA, PSO and ACO) will proceed to solve this problem by performing at least two hand iterations on a reduced version of the problem.
-% Implement the proposed solution using Matlab/Octave/Python.
+While there are many factors that can be considered for political districting, for the sake of efficiency and simplicity, our fitness function only focuses on the two main goals of political districting which are population equality and district compactness.  These measures do not assess the contiguity of a solution, as the algorithms used are designed to only evaluate valid solutions.  A constant coefficient is introduced to each term to allow us to tune how much each factor contributes to the overall fitness.
 
+$$f(x) = c_{pop} \cdot f_{pop} + c_{shape} \cdot f_{shape}$$
+
+\subsubsection{Population Equality}
+In an ideal solution, each district would have the same population, which would equal the average population across the districts.  We therefore define the measure of population equality for a set of districts $D$ where $P_d(x)$ is the total population of district $d \in D$ as
+$$f_{pop}(x) = \sum_{d \in D} \left(P_d(x) - \frac{\sum_{j \in D} P_j(x)}{|D|}\right)$$
+
+\subsubsection{Compactness}
+To evaluate compactness we use the Schwartzberg Index, which is the perimeter of a district squared divided by its area, due to it being simple to compute.
+
+$$f_{shape} = \sum_{d \in D} \frac{(perimeter_d)^2}{area_d}$$
+
+\subsection{Neighborhood}
+% Define a suitable neighborhood operator.
+The neighborhood of a given solution is defined as all possible solutions reachable by swapping one GU from district $i$ to district $j$.  
+\subsection{Algorithm Description}
+% Define a suitable solving strategy for this problem.
+\subsection{Parameter Values}
+% Select your own values for the parameter and explain the basis for your selection.
+\subsection{Example Runthrough}
+% Describe how each algorithm (TS, SA, GA, PSO and ACO) will proceed to solve
+% this problem by performing at least two hand iterations on a reduced version
+% of the problem.
+We will demonstrate two iterations of the three algorithms we have chosen to implement using a simple example input.
+The input will be represented as a grid of cells, where each cell shares a border with its vertical and horizontal neighboring cells. 
+
+The population of each cell will be assumed to be 1 for simplicity, and the solution will be a grouping of cells such that there are exactly two groups that represent two districts. \\
+
+\subsubsection{Simulated Annealing}~\\\\
+\begin{figure}[h!]
+    \includegraphics[width=3cm]{sa.png}
+    \centering
+    \label{fig:sa_example}
+    \caption{Example run using Simulated Annealing}
+\end{figure}
+Figure \ref{fig:sa_example} shows the first two iterations of the SA implementation.
+We start with a randomly generated initial solution of two districts with a fitness cost of 19.3 (calculated using the previously defined cost function).
+
+The neighborhood of the initial solution is defined by the set of possible cell swaps (switching a cell from one district to another) without breaking continuity.
+
+The algorithm will randomly pick one of these neighbors, and will choose it as the new solution if its fitness is better than the current one, or if the acceptance probability given the current temperature allows for worser solutions.
+
+The algorithm does not stop in the first two iterations since the stopping conditions have not been met. Since the temperature is quite high in the beginning, the first two iterations also end up accepting solutions that have a worse fitness than the previous solution. \\
+
+\subsubsection{Tabu Search}~\\\\
+\begin{figure}[h!]
+    \includegraphics[width=3cm]{sa.png}
+    \centering
+    \label{fig:sa_example}
+    \caption{Example run using Tabu Search}
+\end{figure}
 
 
 \section{Performance Evaluation}
@@ -84,5 +146,6 @@ Federica~Ricca et al. Weighted Voronoi region algorithms for political
         for political districting, 2003
 \end{thebibliography}
 \end{document}
+
 
 
