added testing images into report

--- a/report.tex
+++ b/report.tex
@@ -123,6 +123,28 @@ how we did it:
         - did 100 to get more accurate results 
     - param tuning for PSO 
         - changed constants C1, C2, C3 (unified intervals) 
+
+\begin{figure}[h!]
+    \includegraphics[width=8cm]{images/compactness_graph.png}
+    \centering
+    \label{fig:compactness_results}
+    \caption{Compactness Results for 100 Iterations on Iowa}
+\end{figure}
+
+\begin{figure}[h!]
+    \includegraphics[width=8cm]{images/pop_equality_graph.png}
+    \centering
+    \label{fig:pop_results}
+    \caption{Population Equality Results for 100 Iterations on Iowa (excluding SA)}
+\end{figure}
+
+\begin{figure}[h!]
+    \includegraphics[width=8cm]{images/fitness_graph.png}
+    \centering
+    \label{fig:fitness_results}
+    \caption{Overall Fitness Results for 100 Iterations on Iowa (excluding SA)}
+\end{figure}
+
 - SA is really bad compared to other algos for all: comp, pop, and overall fitness 
 - other 3 algos perform similarily for comp, best is PSO 
 - other 3 algos performance for pop: 
